added st-folium map

--- a/src/notebooks/bronze.ipynb
+++ b/src/notebooks/bronze.ipynb
@@ -4,10 +4,7 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
+     "cellMetadata": {},
      "inputWidgets": {},
      "nuid": "689832e8-949a-4226-a5f6-3c6c80d59e06",
      "showTitle": false,
@@ -17,13 +14,11 @@
    },
    "source": [
     "## Kingfisher County Well Header Locations\n",
-    "#### Comparing Vendors With Databricks Geospatial\n",
+    "#### Comparing Well Locations With Databricks Geospatial\n",
     "\n",
     "Oil and Gas companies in the United States generally obtain data used by geoscientists from a few vendors. Many states also provide data that may be slightly more current.\n",
     "\n",
-    "Which vendor has more data? Is the data identical among vendors? Which data source is the _best_ and what does that even mean? We're not going to answer most of those questions! \uD83D\uDE02\n",
-    "\n",
-    "This exercise just compares well surface locations (Lat/Lon) in busy [Kingfisher County](https://kingfisher.okcounties.org/about), Oklahoma.\n",
+    "Do the Lat/Lons for the same wells match among vendors? This exercise examines wells in [Kingfisher County](https://kingfisher.okcounties.org/about), Oklahoma. **Spoiler: nope.**\n",
     "\n",
     "The two biggest E&P data vendors in the U.S. are: \n",
     "\n",
@@ -84,6 +79,36 @@
       "rowLimit": 10000
      },
      "inputWidgets": {},
+     "nuid": "15ce976f-8b17-4474-89a8-1e3d83f9a235",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "%sql\n",
+    "--DROP CATALOG geodata_dev CASCADE;\n",
+    "\n",
+    "CREATE SCHEMA IF NOT EXISTS geodata.staging;\n",
+    "CREATE EXTERNAL VOLUME IF NOT EXISTS geodata.staging.raw\n",
+    "  LOCATION 's3://databricks-purrio/raw/';\n",
+    "\n",
+    "CREATE EXTERNAL VOLUME IF NOT EXISTS geodata.staging.export\n",
+    "  LOCATION 's3://databricks-purrio/export/';"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "implicitDf": true,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
      "nuid": "a8ce7293-2005-481c-afd0-1baa54666055",
      "showTitle": false,
      "tableResultSettingsMap": {},
@@ -104,10 +129,7 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
+     "cellMetadata": {},
      "inputWidgets": {},
      "nuid": "3bbbc002-4565-4b18-bd3c-6d169adae69b",
      "showTitle": false,
@@ -249,10 +271,7 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
+     "cellMetadata": {},
      "inputWidgets": {},
      "nuid": "27d4d455-fe27-47ed-b1c3-4984977f28cf",
      "showTitle": false,
@@ -359,10 +378,7 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
+     "cellMetadata": {},
      "inputWidgets": {},
      "nuid": "49dc490b-03ac-4b9d-a3c1-5be41f6aed26",
      "showTitle": false,
@@ -450,25 +466,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {
-    "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
-     "inputWidgets": {},
-     "nuid": "1c105b86-61f3-49e9-a626-a8590627125a",
-     "showTitle": false,
-     "tableResultSettingsMap": {},
-     "title": ""
-    }
-   },
-   "source": [
-    "Sanity check..."
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 0,
    "metadata": {
@@ -533,7 +530,7 @@
    "language": "python",
    "notebookMetadata": {
     "mostRecentlyExecutedCommandWithImplicitDF": {
-     "commandId": 7311707733906422,
+     "commandId": 4720911970065304,
      "dataframes": [
       "_sqldf"
      ]
