--- a/src/notebooks/gold.ipynb
+++ b/src/notebooks/gold.ipynb
@@ -4,10 +4,7 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
+     "cellMetadata": {},
      "inputWidgets": {},
      "nuid": "6e9fd993-6a38-4851-9f7a-7dbdc2774ea4",
      "showTitle": false,
@@ -16,7 +13,8 @@
     }
    },
    "source": [
-    "# Overview"
+    "## Analyze\n",
+    "Merge our data sources and compare the spatial locations."
    ]
   },
   {
@@ -42,6 +40,23 @@
     "CREATE SCHEMA IF NOT EXISTS geodata.gold;\n",
     "\n",
     "DROP TABLE IF EXISTS geodata.gold.well_header;"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "fedfb2f7-0a89-4f23-bc1c-155a4a904c1c",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "source": [
+    "## Union the tables\n",
+    "Combine the three vendor tables into a single `well_header` table. The combined count should be ~28000 in 2025."
    ]
   },
   {
@@ -120,38 +135,31 @@
    "outputs": [],
    "source": [
     "%sql\n",
-    "select 'Three-vendor', count(*) as row_count from geodata.gold.well_header"
+    "select count(*) as three_vendor_count from geodata.gold.well_header"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 0,
+   "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "implicitDf": true,
-      "rowLimit": 10000
-     },
+     "cellMetadata": {},
      "inputWidgets": {},
-     "nuid": "a516bd7d-db57-4d60-a72b-030ee4e083e9",
+     "nuid": "beb780d8-5836-41ba-aa28-a537fb69feee",
      "showTitle": false,
-     "tableResultSettingsMap": {
-      "0": {
-       "dataGridStateBlob": "{\"version\":1,\"tableState\":{\"columnPinning\":{\"left\":[\"#row_number#\"],\"right\":[]},\"columnSizing\":{},\"columnVisibility\":{}},\"settings\":{\"columns\":{}},\"syncTimestamp\":1754006670700}",
-       "filterBlob": null,
-       "queryPlanFiltersBlob": null,
-       "tableResultIndex": 0
-      }
-     },
+     "tableResultSettingsMap": {},
      "title": ""
     }
    },
-   "outputs": [],
    "source": [
-    "%sql\n",
-    "SELECT uwi_10, vendor, geom FROM geodata.gold.well_header\n",
-    "ORDER BY uwi_10, vendor"
+    "## Calculate the spatial distances\n",
+    "Finally, we can compare the surface locations. For expediency, we'll only compare wells that are avaliable from all three sources. We use `ST_DISTANCESPHEROID` to calculate the distance (in Meters not degrees) between sets of two points. The output looks something like this:\n",
+    "\n",
+    "| ... | distance_occ_env | distance_env_sp | distance_occ_sp | ... |\n",
+    "| -- | -- | -- | -- | -- |\n",
+    "| ... | 11.11 | 22.22 | 33.33 | ... |\n",
+    "| ... | 44.44 | 55.55 | 66.66 | ... |\n",
+    "\n",
+    "...where three `distance_` columns express the difference between all sets of two points."
    ]
   },
   {
@@ -175,6 +183,13 @@
     "from pyspark.sql.functions import col, when, expr\n",
     "\n",
     "well_header_df = spark.table(\"geodata.gold.well_header\")\n",
+    "\n",
+    "enverus_well_name = (\n",
+    "    well_header_df\n",
+    "    .filter(col(\"vendor\") == \"ENV\")\n",
+    "    .select(\"uwi_10\", \"well_name\")\n",
+    "    .withColumnRenamed(\"well_name\", \"well_name_ENV\")\n",
+    ")\n",
     "\n",
     "# Pivot the table wide by vendor:\n",
     "wide_df = (\n",
@@ -208,41 +223,14 @@
     "    )\n",
     ")\n",
     "\n",
-    "display(wide_df)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
-     "inputWidgets": {},
-     "nuid": "3e8672ee-c953-494b-a64f-904ddc9795cb",
-     "showTitle": false,
-     "tableResultSettingsMap": {},
-     "title": ""
-    }
-   },
-   "source": [
-    "-- Pivot wide\n",
-    "SELECT\n",
-    "  uwi_10,\n",
-    "  MAX(CASE WHEN vendor = 'ENV' THEN geom END) AS geom_env,\n",
-    "  MAX(CASE WHEN vendor = 'OCC' THEN geom END) AS geom_occ,\n",
-    "  MAX(CASE WHEN vendor = 'SP'  THEN geom END) AS geom_sp\n",
-    "FROM your_table\n",
-    "GROUP BY uwi_10\n",
+    "wide_df = wide_df.join(enverus_well_name, on=\"uwi_10\", how=\"left\")\n",
     "\n",
     "\n",
-    "SELECT\n",
-    "  *,\n",
-    "  ST_DISTANCE(geom_env, geom_occ) AS distance_env_occ,\n",
-    "  ST_DISTANCE(geom_env, geom_sp)  AS distance_env_sp,\n",
-    "  ST_DISTANCE(geom_occ, geom_sp)  AS distance_occ_sp\n",
-    "FROM pivoted_table\n",
-    "WHERE (geom_env IS NOT NULL AND geom_occ IS NOT NULL)\n",
-    "   OR (geom_env IS NOT NULL AND geom_sp  IS NOT NULL)\n",
-    "   OR (geom_occ IS NOT NULL AND geom_sp  IS NOT NULL)\n"
+    "#display(wide_df)\n",
+    "\n",
+    "wide_df.write.format(\"delta\").mode(\"overwrite\").saveAsTable(\"geodata.gold.well_surface_locations\")\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -256,7 +244,7 @@
       "rowLimit": 10000
      },
      "inputWidgets": {},
-     "nuid": "d35d6f1c-5027-4260-81d4-3f5a229c12c4",
+     "nuid": "318c8647-44cc-4e31-9286-22aa3841dba5",
      "showTitle": false,
      "tableResultSettingsMap": {},
      "title": ""
@@ -265,9 +253,67 @@
    "outputs": [],
    "source": [
     "%sql\n",
-    "--SELECT ST_DISTANCE_SPHERE(ST_GEOMFROMTEXT('POINT(0 0)'), ST_GEOMFROMTEXT('POINT(1 1)'));\n",
-    "SELECT ST_DISTANCESPHEROID(ST_GEOMFROMTEXT('POINT(0 0)'), ST_GEOMFROMTEXT('POINT(1 1)'));\n",
-    "--show functions like 'ST_DISTANCE%'"
+    "select * from geodata.gold.well_surface_locations"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "f6063b24-00b5-4f67-95d7-2044d70e87e8",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "source": [
+    "## Filter by the largest variance\n",
+    "Using SQL `OR` operator lets us pick all wells where any vendor's Lat/Lon point exceeds a threshold. Switch to the `AND` operator to see where they _really_ don't match.\n",
+    "\n",
+    "## Which one is correct?\n",
+    "Excellent question!\n",
+    "\n",
+    "* Most newer wells are verified with GPS. These may or may not agree with regulatory agencies or vendors.\n",
+    "* Algorithmically defined Latitude/Longitudes based on satellite or aerial photos provide the next-best option. \n",
+    "* The oldest well locations are inferred from Township/Range (or something more archaic).\n",
+    "\n",
+    "In other words, \"correctness\" needs to account for courthouse records, subsurface mineral rights and lawyers. Newer wells generally have more geospatially accurate and agreed-upon location data, but all those varying sources of truth over time can lead to some geospatial confusion."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "e25fd175-2c49-4ea6-9a24-92f06d9390f6",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "from pyspark.sql.functions import col\n",
+    "\n",
+    "df = spark.table(\"geodata.gold.well_surface_locations\")\n",
+    "\n",
+    "DISTANCE_THRESHOLD = 100\n",
+    "\n",
+    "# Filter for rows where at least one pairwise distance exceeds the threshold\n",
+    "df_filtered = df.filter(\n",
+    "    (col(\"distance_env_occ\") > DISTANCE_THRESHOLD) |\n",
+    "    (col(\"distance_env_sp\") > DISTANCE_THRESHOLD) |\n",
+    "    (col(\"distance_occ_sp\") > DISTANCE_THRESHOLD)\n",
+    ")\n",
+    "\n",
+    "display(df_filtered)"
    ]
   }
  ],
@@ -283,7 +329,7 @@
    "language": "python",
    "notebookMetadata": {
     "mostRecentlyExecutedCommandWithImplicitDF": {
-     "commandId": 6155427285042626,
+     "commandId": 6408204242416873,
      "dataframes": [
       "_sqldf"
      ]
