--- a/src/notebooks/silver.ipynb
+++ b/src/notebooks/silver.ipynb
@@ -4,10 +4,7 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
+     "cellMetadata": {},
      "inputWidgets": {},
      "nuid": "356c7843-4124-48eb-9798-1583001c5c3c",
      "showTitle": false,
@@ -16,8 +13,10 @@
     }
    },
    "source": [
+    "## Standardize\n",
+    "Filter the source data to a few common fields. We don't use most for geospatial comparison, but the Operator and Well Name/Number would be useful if we need to identify wells with more certainty.\n",
     "\n",
-    "# Overview\n"
+    "Since two of the sources use WGS84 (and it's basically the standard for online GIS these days), we'll use `SRID=4326` for our geometry column."
    ]
   },
   {
@@ -72,10 +71,7 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
+     "cellMetadata": {},
      "inputWidgets": {},
      "nuid": "72f0be14-9f44-4ad3-a5b5-7eb2f8796238",
      "showTitle": false,
@@ -84,7 +80,7 @@
     }
    },
    "source": [
-    "# OCC"
+    "## OCC (Oklahoma Corporation Commission)"
    ]
   },
   {
@@ -133,10 +129,7 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
+     "cellMetadata": {},
      "inputWidgets": {},
      "nuid": "5caa2ff2-1feb-4f10-91a7-3914c30b79ec",
      "showTitle": false,
@@ -145,7 +138,7 @@
     }
    },
    "source": [
-    "# Enverus"
+    "## Enverus "
    ]
   },
   {
@@ -194,10 +187,7 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
+     "cellMetadata": {},
      "inputWidgets": {},
      "nuid": "c3ec1448-bd7a-4c8a-a26c-c80aa816a08e",
      "showTitle": false,
@@ -206,7 +196,9 @@
     }
    },
    "source": [
-    "# S&P"
+    "## S&P Global\n",
+    "Note how we use `ST_TRANSFORM` to convert from NAD27 to WGS84\n",
+    "Also, we in"
    ]
   },
   {
